--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         d="M19.578 9.399c1.321-.784 1.321-2.042 0-2.798L9.725.84C8.404.056 7.33.7 7.33 2.238V13.79c0 1.539 1.074 2.182 2.395 1.399l9.853-5.79Z" />
       </svg>
 
-      <div class="bg-white border border-stone-200 rounded-lg shadow shadow-stone-200 max-w-96 p-10 text-center mt-6">
-        <h1 class="text-xl font-bold">
+      <div class="bg-white border border-stone-200 rounded-lg shadow shadow-stone-200 max-w-md p-10 text-center mt-6">
+        <h1 class="text-2xl font-bold">
           Offline for maintenance
         </h1>
 
